deployment/user-authen/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-authen-deployment
  namespace: app-backends
  labels:
    app: user-authen-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-authen-server
  template:
    metadata:
      labels:
        app: user-authen-server
        version: "v1"
    spec:
      containers:
      - name: user-authen-server
        image: eu.gcr.io/uob-tv-project-dev/user-authen-server:1-2
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        resources:
          requests:
            memory: "80Mi"
            cpu: "200m"
          limits:
            memory: "160Mi"
            cpu: "400m"
