deployment/user-authen/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: user-authen-service
  namespace: app-backends
spec:
  selector:
    app: user-authen-server
  type:  ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
