deployment/user-authen/istio-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-authen-routes
  namespace: app-backends
spec:
  hosts:
  - "www.uob-tv.co.uk"
  - "uob-tv.co.uk"
  gateways:
  - uob-tv-public-gateway
  http:
  - match:
    - uri:
        exact: /api/v1/verify_signin
    route:
    - destination:
        host: user-authen-service
        port:
          number: 8080
    corsPolicy:
      allowOrigin:
        - "*"
      allowMethods:
      - POST
      - GET
      allowHeaders:
      - authorization
      - content-type
      - accept
      - origin
      - user-agent
      allowCredentials: true
